[Front][Fix] - Attempt #3 to fix card flip on iOS devices

--- a/mantra-frontend/src/app/pages/study/study.component.css
+++ b/mantra-frontend/src/app/pages/study/study.component.css
@@ -139,7 +139,7 @@
     }
 }
 
-@media (max-width: 640px) {
+/* @media (max-width: 640px) {
     .flashcard {
         user-select: none;
         -webkit-user-select: none;
@@ -163,4 +163,4 @@
         z-index: 1;
         opacity: 0.7;
     }
-}
+} */
